re PR middle-end/18008 (Duplicate mask on bitfield insertion)

PR middle-end/18008
        * combine.c (make_field_assignment): Simplify store to zero_extract
        from a source with an overlapping mask.

From-SVN: r94282